2008-04-22       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2System.mod:  implement SET8, SET16, SET32
	  fixed sized types.  Also implemented is AttemptToCreateSetType.
	* gm2/gm2-compiler/M2GCCDeclare.mod:  declare fixed sized types.
	* gm2/gccgm2.c:  added build_m2_set8_type_node,
	  build_m2_set16_type_node and build_m2_set32_type_node.
	  Added ability to create fixed sized SET_TYPE types.
	  Added gccgm2_GetM2Set8, gccgm2_GetM2Set16 and gccgm2_GetM2Set32.
	* gm2/gm2-compiler/M2Base.mod:  added set8, set16, set32 and
	  included these into the assignment, expression and parameter
	  matrices.
	* gm2/gm2-compiler/gccgm2.def:  export GetM2Set8, GetM2Set16
	  and GetM2Set32.

2008-04-19       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2Range.mod:  fixed bug so that GetMinMax
	  returns FALSE if the type is a WORD or BYTE, LOC, WORD16 etc
	  and also returns FALSE if the type is a set.  This fixes
	  the bug in testsuite/gm2/iso/pass/testiso2.mod.
	* gm2/gm2-compiler/M2GenGCC.mod:  use AddStatement to connect
	  the case range check to the list of trees.  This fixes
	  testsuite/gm2/pim/run/fail/case.mod.

2008-04-18       Gaius Mulley <gaius@gnu.org>
	
	* gm2/gm2.texi:  included __COLUMN__ into documentation.
	* gm2/m2.flex:   added column field to lineInfo.
          Use column field to hold first token column position.
	  There by allowing testsuite/gm2/extensions/run/pass/column.mod
	  to pass.
	* testsuite/gm2/extensions/run/pass/gm2.exp:  fixed include path
	  which allows all these tests to pass.
	* testsuite/gm2/extensions/pass/gm2.exp:  fixed include path
	  which allows all these tests to pass.

2008-04-17       Gaius Mulley <gaius@gnu.org>

	* gm2/tools-src/makeSystem:  removed '-' from sed command
	  so that it is compatible with non GNU sed.

2008-04-16       Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  modified rules relating to gm2.info
	  so that it is built in the $(objdir) directory.
